# rust-vercel-homepage

./: Cargo.toml  LICENSE-MIT  README.md  index.html  index.scss
nextjs-version/: package.json
nextjs-version/pages/: _app.tsx  _document.tsx  index.tsx
nextjs-version/styles/sass/: _main.scss
sass/: _footer.scss  _header.scss  _reset.scss  _wrapper.scss
src/: app.rs
