[package]
name = "yew-vercel-clone"
version = "0.1.0"
edition = "2021"
description = "Clone da homepage da vercel feito usando yew"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
yew_assets = "0.1.2"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"